# Fast_Control_Core

./: .gitignore  README.md  pyproject.toml  requirements.txt
controladoria_cli/: main.py
controladoria_cli/commands/: base_dados.py  beneficios.py  provisoes.py  transitorias.py
controladoria_cli/core/config/: __init__.py  account_mapping.py  settings.py
controladoria_cli/core/services/: base_dados_service.py  beneficios_service.py  provisoes_service.py  transitorias_services.py
